Fix: error message wasn't visible enough, make the font-size larger

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,7 +74,7 @@ input {
 }
 #error-message{
     color: var(--customRed) !important;
-    font-size: 0.9em !important ;
+    font-size: 1.2em !important ;
 }
 /* Hide word-data until the fetchFromEntry function is called */
 #word-data{
